--- a/LabBook.org
+++ b/LabBook.org
@@ -3773,3 +3773,32 @@ so, an increase in L3 miss rate generates L2 misses just after.
 
 Note: Change *x* in the previous code block to see other timeslices.
 
+* [11:25:11; 29.08.2016] Novo Experimento L2Cache e L3Cache na mesma Execução
+- Vamos fazer um novo experimento para o benchmark do NAS, a fim de
+  verificar se existe diferença entre uma execução que usa como
+  parâmetro =-g L2CACHE e L3CACHE= e duas execuções para cada grupo. A
+  hipótese é que alguns valores possam ser obtidos por registradores e
+  não contadores de hardware.
+
+#+begin_src sh :results output :exports both :tangle scripts/scriptOfExecutionNAS_expL2AndL3.bash
+#!bin/bash
+rm -rf log_NASExp3
+mkdir log_NASExp3
+
+benchpath=/home/aulapinroot/Programs/NPB3.3.1/NPB3.3-OMP/bin
+
+bt_command=$benchpath/bt.B.x
+cg_command=$benchpath/cg.B.x
+ft_command=$benchpath/ft.B.x
+lu_command=$benchpath/lu.B.x
+sp_command=$benchpath/sp.B.x
+ua_command=$benchpath/ua.B.x
+
+sudo likwid-perfctr -t 100ms -f -c N:0-31 -g L2CACHE -g L3CACHE  $bt_command >> log_NASExp3/saidaBt_2.log 2>> log_NASExp3/saidaBt_1.log 
+sudo likwid-perfctr -t 50ms -f -c N:0-31 -g L2CACHE -g L3CACHE $cg_command >> log_NASExp3/saidaCg_2.log 2>> log_NASExp3/saidaCg_1.log 
+sudo likwid-perfctr -t 30ms -f -c N:0-31 -g L2CACHE -g L3CACHE $ft_command >> log_NASExp3/saidaFt_2.log 2>> log_NASExp3/saidaFt_1.log 
+sudo likwid-perfctr -t 100ms -f -c N:0-31 -g L2CACHE -g L3CACHE $lu_command >> log_NASExp3/saidaLu_2.log 2>> log_NASExp3/saidaLu_1.log 
+sudo likwid-perfctr -t 225ms -f -c N:0-31 -g L2CACHE -g L3CACHE $sp_command >> log_NASExp3/saidaSp_2.log 2>> log_NASExp3/saidaSp_1.log 
+sudo likwid-perfctr -t 110ms -f -c N:0-31 -g L2CACHE -g L3CACHE $ua_command >> log_NASExp3/saidaUa_2.log 2>> log_NASExp3/saidaUa_1.log 
+
+#+end_src
